--- a/Dxkotlin/app/src/main/res/layout/activity_main.xml
+++ b/Dxkotlin/app/src/main/res/layout/activity_main.xml
@@ -105,7 +105,7 @@
             />
 
         <TextView
-            android:id="@+id/tvAutenticacao"
+            android:id="@+id/tv_autenticacao"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_below="@id/img_login"
