--- a/Dxkotlin/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/Dxkotlin/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -256,6 +256,13 @@
                     android:textAllCaps="false"
                     />
 
+                <TextView
+                    android:id="@+id/tv_autenticacao"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_below="@id/img_login"
+                    android:text="asasasasa"/>
+
             </LinearLayout>
 
         </ScrollView>
