fix removendo localdate

--- a/Dxkotlin/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/Dxkotlin/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -38,6 +38,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/img_cadastro"
             android:layout_centerHorizontal="true"
+            android:windowSoftInputMode="adjustResize"
+
             >
 
             <LinearLayout
@@ -53,7 +55,7 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_usuario"
                     android:layout_marginTop="40dp"
 
@@ -69,7 +71,7 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_nome"
                     android:drawablePadding="8dp"
                     android:padding="5dp"
@@ -84,7 +86,7 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_email"
                     android:drawablePadding="8dp"
                     android:padding="5dp"
@@ -99,9 +101,10 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_cpf"
                     android:drawablePadding="8dp"
+                    android:inputType="textPostalAddress"
                     android:padding="5dp"
                     android:layout_below="@id/et_nome"
                     android:layout_marginTop="18dp"
@@ -114,7 +117,7 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_senha"
                     android:drawablePadding="8dp"
                     android:padding="5dp"
@@ -129,7 +132,7 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_telefone"
                     android:drawablePadding="8dp"
                     android:padding="5dp"
@@ -149,7 +152,7 @@
                     android:hint="Data Nascimento"
                     android:inputType="date"
                     android:padding="5dp"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textColorHint="@color/black"
                     android:textSize="16sp" />
 
@@ -160,7 +163,7 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_rua"
                     android:drawablePadding="8dp"
                     android:padding="5dp"
@@ -176,7 +179,7 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_cep"
                     android:drawablePadding="8dp"
                     android:padding="5dp"
@@ -191,7 +194,7 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_bairro"
                     android:drawablePadding="8dp"
                     android:padding="5dp"
@@ -206,7 +209,7 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_cidade"
                     android:drawablePadding="8dp"
                     android:padding="5dp"
@@ -221,7 +224,7 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_numero"
                     android:drawablePadding="8dp"
                     android:padding="5dp"
@@ -236,7 +239,7 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_complemento"
                     android:drawablePadding="8dp"
                     android:padding="5dp"
@@ -254,6 +257,7 @@
                     android:backgroundTint="#9747FF"
                     android:layout_marginTop="16dp"
                     android:textAllCaps="false"
+                    android:onClick="cadastrarUsuario"
                     />
 
                 <TextView
