--- a/Dxkotlin/app/src/main/res/values/colors.xml
+++ b/Dxkotlin/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="black_ground">#1E1E1E</color>
+    <color name="roxo_padrao">#9747FF</color>
+    <color name="branco_navbar">#F8F8F8</color>
 </resources>
