--- a/Dxkotlin/app/src/main/res/layout/activity_cadastro_empresa.xml
+++ b/Dxkotlin/app/src/main/res/layout/activity_cadastro_empresa.xml
@@ -53,7 +53,7 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_usuario"
                     android:layout_marginTop="40dp"
 
@@ -69,7 +69,7 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_nome"
                     android:drawablePadding="8dp"
                     android:padding="5dp"
@@ -78,29 +78,28 @@
                     />
 
                 <EditText
+                    android:id="@+id/et_senha"
+                    android:layout_width="370dp"
+                    android:layout_height="52dp"
+                    android:layout_below="@id/et_nome"
+                    android:layout_marginTop="18dp"
+                    android:background="@drawable/rounded_edittext"
+                    android:drawablePadding="8dp"
+                    android:hint="Senha"
+                    android:padding="5dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
+                    android:textSize="16sp" />
+
+                <EditText
                     android:layout_width="370dp"
                     android:layout_height="52dp"
                     android:hint="Email"
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_email"
-                    android:drawablePadding="8dp"
-                    android:padding="5dp"
-                    android:layout_below="@id/et_nome"
-                    android:layout_marginTop="18dp"
-                    />
-
-                <EditText
-                    android:layout_width="370dp"
-                    android:layout_height="52dp"
-                    android:hint="Senha"
-                    android:textColorHint="@color/black"
-                    android:textSize="16sp"
-                    android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
-                    android:id="@+id/et_senha"
                     android:drawablePadding="8dp"
                     android:padding="5dp"
                     android:layout_below="@id/et_nome"
@@ -114,7 +113,7 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_telefone"
                     android:drawablePadding="8dp"
                     android:padding="5dp"
@@ -129,7 +128,7 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_cnpj"
                     android:drawablePadding="8dp"
                     android:padding="5dp"
@@ -145,7 +144,7 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_rua"
                     android:drawablePadding="8dp"
                     android:padding="5dp"
@@ -161,7 +160,7 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_cep"
                     android:drawablePadding="8dp"
                     android:padding="5dp"
@@ -176,7 +175,7 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_cidade"
                     android:drawablePadding="8dp"
                     android:padding="5dp"
@@ -191,7 +190,7 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_numero"
                     android:drawablePadding="8dp"
                     android:padding="5dp"
@@ -202,12 +201,12 @@
                 <EditText
                     android:layout_width="370dp"
                     android:layout_height="52dp"
-                    android:hint="Complemento"
+                    android:hint="Bairro"
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
-                    android:id="@+id/et_complemento"
+                    android:textColor="@color/black"
+                    android:id="@+id/et_bairro"
                     android:drawablePadding="8dp"
                     android:padding="5dp"
                     android:layout_below="@id/et_cidade"
@@ -222,20 +221,69 @@
                     android:textColorHint="@color/black"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/et_funcionarios"
                     android:drawablePadding="8dp"
                     android:padding="5dp"
                     android:layout_below="@id/et_cidade"
                     android:layout_marginTop="18dp"
-                    android:inputType="number"
+
                     />
+
+                <EditText
+                    android:layout_width="370dp"
+                    android:layout_height="52dp"
+                    android:hint="Complemento"
+                    android:textColorHint="@color/black"
+                    android:textSize="16sp"
+                    android:background="@drawable/rounded_edittext"
+                    android:textColor="@color/black"
+                    android:id="@+id/et_complemento"
+                    android:drawablePadding="8dp"
+                    android:padding="5dp"
+                    android:layout_below="@id/et_cidade"
+                    android:layout_marginTop="18dp"
+
+                    />
+
+                <EditText
+                    android:layout_width="370dp"
+                    android:layout_height="52dp"
+                    android:hint="Data Nascimento"
+                    android:textColorHint="@color/black"
+                    android:textSize="16sp"
+                    android:background="@drawable/rounded_edittext"
+                    android:textColor="@color/black"
+                    android:id="@+id/et_data_nascimento"
+                    android:drawablePadding="8dp"
+                    android:padding="5dp"
+                    android:layout_below="@id/et_cidade"
+                    android:layout_marginTop="18dp"
+
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:id="@+id/tv_resultado"
+                    android:textAlignment="center"
+                    android:textSize="15sp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_below="@id/et_funcionarios"
+                    android:layout_centerHorizontal="true"
+                    android:textColor="@color/black"
+                    />
+
+
+
                 <Button
                     android:layout_width="370dp"
                     android:layout_height="52dp"
                     android:textSize="16sp"
                     android:text="Registrar"
-                    android:layout_below="@id/et_complemento"
+                    android:onClick="cadastrarEmpresa"
+                    android:layout_below="@id/et_bairro"
                     android:id="@+id/btn_Login"
                     android:backgroundTint="#9747FF"
                     android:layout_marginTop="16dp"
